--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div><img class="circleEffect" src="img/IMG_0101.jpeg" alt=""></div>
     <header>
         <div class="line-1 anim-typewriter container">
-            <h1>Hi, I'm James</h1>
+            <h1>Hi, I'm James Longoria</h1>
         </div>
     </header>
 
