--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div><img class="circleEffect" src="img/IMG_0101.jpeg" alt=""></div>
     <header>
-        <div class="line-1 anim-typewriter container">
+        <div>
             <h1>Hi, I'm James Longoria</h1>
         </div>
     </header>
