--- a/index.html
+++ b/index.html
@@ -2,73 +2,75 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <title>James | Longoria Front-End Developer</title>
+  <title>James | Longoria Front-End Developer</title>
 </head>
 
 <body>
 
-    <div>
-    <ul>
-        <li><a href="index.html"><i class="fa fa-home fa-1x"></i></a></li>
-        <li><a href="https://github.com/JRLC0D3"><i class="fa fa-github-square fa-1x"></i></a></li>
-        <li>
-            <a href="mailto:jlongoria511@gmail.com"><i class="fa fa-envelope-open fa-1x"></i></a>
-        </li>
-    </ul>
-    </div>
+<div>
+  <ul>
+    <li><a href="index.html"><i class="fa fa-home fa-1x"></i></a></li>
+    <li><a href="https://github.com/JRLC0D3"><i class="fa fa-github-square fa-1x"></i></a></li>
+    <li>
+      <a href="mailto:jlongoria511@gmail.com"><i class="fa fa-envelope-open fa-1x"></i></a>
+    </li>
+  </ul>
+</div>
 
-    <div><img class="circleEffect" src="img/IMG_0101.jpeg" alt=""></div>
-    <header>
-        <div>
-            <h1>Hi, I'm James Longoria</h1>
-        </div>
-    </header>
-
-
-    <br>
-
-    <header>
-        <div>
-
-            <h2>About</h2>
-            <p class="text">
-                I specialize in HTML, CSS, and JavaScript. I'm passionate about web development and would like to help you. Although I am new to web development, I am no stranger when it comes to problem solving and serving people. I'm currently a Texas Criminal Investigator
-                and I have been a police officer for 11 years.
-            </p>
-        </div>
-    </header>
-
-    <div class="row">
-        <div class="column">
-            <img class="techStack" src="img/badge-html-5-512.webp" alt="">
-        </div>
-        <div class="column">
-            <img class="techStack" src="img/121-css3-512.webp" alt="">
-        </div>
-        <div class="column">
-            <img class="techStack" src="img/code-programming-javascript-software-develop-command-language-512.webp" alt="">
-        </div>
-        <div class="column">
-            <img class="techStack" src="img/192-detective-2-256.png" alt="">
-        </div>
+<div><img class="circleEffect" src="img/IMG_0101.jpeg" alt=""></div>
+<header>
+  <div>
+    <h1>Hi, I'm James Longoria</h1>
+  </div>
+</header>
 
 
-    </div>
+<br>
+
+<header>
+  <div>
+
+    <h2>About</h2>
+    <p class="text">
+      I specialize in HTML, CSS, and JavaScript. I'm passionate about web development and would like to help you.
+      Although I am new to web development, I am no stranger when it comes to problem solving and serving people. I'm
+      currently a Texas Criminal Investigator
+      and I have been a police officer for 11 years.
+    </p>
+  </div>
+</header>
+
+<div class="row">
+  <div class="column">
+    <img class="techStack" src="img/badge-html-5-512.webp" alt="">
+  </div>
+  <div class="column">
+    <img class="techStack" src="img/121-css3-512.webp" alt="">
+  </div>
+  <div class="column">
+    <img class="techStack" src="img/code-programming-javascript-software-develop-command-language-512.webp" alt="">
+  </div>
+  <div class="column">
+    <img class="techStack" src="img/192-detective-2-256.png" alt="">
+  </div>
 
 
-    <hr>
-    <footer class="footerText ">
-        <i class="fa fa-code"></i> by James Longoria 2020</footer>
+</div>
+
+
+<hr>
+<footer class="footerText ">
+  <i class="fa fa-code"></i> by James Longoria 2020
+</footer>
 
 
 </body>
-
 
 
 </html>
