--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div>
 
     <h2>About</h2>
-    <p class="text">
+    <p>
       I specialize in HTML, CSS, and JavaScript. I'm passionate about web development and would like to help you.
       Although I am new to web development, I am no stranger when it comes to problem solving and serving people. I'm
       currently a Texas Criminal Investigator
@@ -45,7 +45,7 @@
     </p>
   </div>
 </header>
-
+<h3>Current Skills</h3>
 <div class="row">
   <div class="column">
     <img class="techStack" src="img/badge-html-5-512.webp" alt="">
