--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div><img class="circleEffect" src="img/IMG_0101.jpeg" alt=""></div>
 <header>
   <div>
-    <h1 class="typeTwo">Hi, I'm James Longoria</h1>
+    <h1>Hi, I'm James Longoria</h1>
   </div>
 </header>
 
