--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </p>
   </div>
 </header>
-<h3>Current Skills</h3>
+<div>
+<h3>Current Skills<i class="fa fa-keyboard"></i></h3>
+</div>
 <div class="row">
   <div class="column">
     <img class="techStack" src="img/badge-html-5-512.webp" alt="">
@@ -62,9 +64,12 @@
 
 
 </div>
+<div>
+  <h4>Projects Under Construction<i class="fa fa-wrench"></i></h4>
+  <img class="circleEffect"src="img/under-construction-heart-heart-as-under-construction-sign-113817361.jpg" alt="underConstruction">
+</div>
 
 
-<hr>
 <footer class="footerText ">
   <i class="fa fa-code"></i> by James Longoria 2020
 </footer>
