--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 </div>
 <div>
-  <h4>Projects Under Construction<i class="fa fa-wrench"></i></h4>
+  <h4>Projects Under Construction</h4>
   <img class="circleEffect"src="img/under-construction-heart-heart-as-under-construction-sign-113817361.jpg" alt="underConstruction">
 </div>
 
